<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/hinh_anh_san_pham"
        android:src="@drawable/baseline_image_24"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end" />


        <TextView
            android:id="@+id/txtBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/barcode"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/baseline_qr_code_scanner_24"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/txtPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/so_luong"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/_15"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!-- CheckBox thêm vào ở đây -->
    <CheckBox
        android:id="@+id/checkboxPurchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:scaleX="2"
        android:scaleY="2"
        android:contentDescription="@string/nh_d_u_mua" />




</LinearLayout>