<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Tiêu đề -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thongTinSanPham"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@color/colorPrimaryLighter"
                android:paddingVertical="12dp"
                android:layout_marginBottom="12dp"/>

            <!-- Tên sản phẩm -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="text"
                    android:hint="@string/hint_product_name"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Barcode -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_barcode"
                    android:inputType="number"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Mô tả sản phẩm -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_des"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etNote"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/nhap_ghi_chu"
                    android:inputType="text"
                    android:textSize="18sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp">

                <!-- Số lượng -->
                <TextView
                    android:id="@+id/tvQuantityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soLuongText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="start"
                    android:layout_marginEnd="8dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etSoLuong"
                        android:layout_width="60dp"
                        android:layout_height="48dp"
                        android:text="@string/_1"
                        android:inputType="number"
                        android:textSize="18sp"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnDecrease"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/decrease_nums"
                        android:src="@drawable/outline_remove_24"
                        android:background="@drawable/btn_circle"
                        android:elevation="4dp"
                        android:scaleType="center"
                        android:padding="10dp"
                        android:layout_marginEnd="8dp"/>

                    <ImageButton
                        android:id="@+id/btnIncrease"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/increase_nums"
                        android:src="@drawable/baseline_add_24"
                        android:background="@drawable/btn_circle"
                        android:elevation="4dp"
                        android:scaleType="center"
                        android:padding="10dp"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnPickImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/img_picker"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:background="@drawable/login_button_selector"
                android:layout_marginTop="20dp"/>

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_project"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_image_24"
                android:background="@drawable/image_border"
                android:layout_marginTop="8dp"/>

            <!-- Nút Lưu -->
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_selector"
                android:padding="20dp"
                android:text="@string/l_u"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:maxWidth="300dp"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:elevation="2dp"
            android:indeterminate="true"
            android:visibility="invisible"
            android:indeterminateDrawable="@drawable/progressbar"/>

    </RelativeLayout>




</ScrollView>
