<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:radius="12dp"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Dòng trên cùng gồm tên và icon yêu thích -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtListName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Danh sách mua sắm"
                android:textColor="#2E2E2E"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imgFavorite"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/imgFavorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_favorite_border_24"
                android:contentDescription="@string/yeu_thich"
                app:tint="#FF4081"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Thông tin phụ -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/so_sp_can_mua"
                android:textColor="#242323"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtItemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="#242323"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ngay_tao"
                android:textColor="#242323"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txtDateCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textColor="#242323"
                android:textSize="18sp" />
        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>
