<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_15dp"
                        android:src="@drawable/vegetable" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    style="@style/BoldTextStyle"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom"
                    android:maxWidth="320dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:minHeight="48dp"
                        android:drawablePadding="8dp"
                        android:gravity="bottom"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimaryDark" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:gravity="bottom"
                    app:passwordToggleEnabled="true"
                    android:maxWidth="320dp">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="8dp"
                        android:gravity="bottom"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp"
                        android:padding="8dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_button_selector"
                    android:padding="3dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:maxWidth="300dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@color/color"
                android:textSize="15sp"
                style="@style/ButtonRegular"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:elevation="2dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progressbar"
                android:visibility="invisible" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>